--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "fs": "^0.0.1-security",
     "graphql": "^16.8.1",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "https": "^1.0.0"
   }
 }
