--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,1 @@
-{
-    "version": 3,
-    "builds": [
-      {
-        "src": "server/!**",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "server.mjs" }] }
