--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,1 +1,1 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "./server.mjs" }] }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "server.js" }] }
